--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@raalzz/card",
-  "version": "3.0.0",
+  "name": "raalzz",
+  "version": "2.0.0",
   "description": "A personal card of Rahul Sawant",
   "main": "/bin/card.js",
   "bin": {
